--- a/mqttJava.htm
+++ b/mqttJava.htm
@@ -149,6 +149,7 @@ document.getElementById("value1").innerHTML = JSON.parse(r_message.payloadString
   </head>
   <body onload="MQTTconnect()">
     <h1>Simple Web Page Display Dashboard</h1>
+	<h2>SChào Mừng đến với website của tôi</h2>
 	
 
  <table>
