update behavior angular

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>Angular01</title>
-  <base href="/">
+  <base href="/angular01/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
@@ -9,10 +9,10 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 
-<link rel="stylesheet" href="styles.31d6cfe0d16ae931b73c.css"></head>
+<link rel="stylesheet" href="/angular01/styles.3bd254d0b4c38778e457.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="/angular01/styles.3bd254d0b4c38778e457.css"></noscript></head>
 
 <body>
   <app-root></app-root>
-<script src="runtime.04ca43c06ec3211fe04b.js" defer></script><script src="polyfills.9c0821f91f78c8fd921f.js" defer></script><script src="main.ea2e8abbdfa470aab7ff.js" defer></script>
+<script src="/angular01/runtime.04ca43c06ec3211fe04b.js" defer></script><script src="/angular01/polyfills.9c0821f91f78c8fd921f.js" defer></script><script src="/angular01/main.7abfbc1d9ec678fcf4db.js" defer></script>
 
 </body></html>
